--- a/CSS/pages/index.css
+++ b/CSS/pages/index.css
@@ -1,1 +1,4 @@
 @import url(../partials/section-one.css);
+@import url(./global/fonts.css);
+@import url(../partials/home.css);
+@import url(../partials/botao_viva.css);
