--- a/CSS/partials/section-one.css
+++ b/CSS/partials/section-one.css
@@ -15,6 +15,8 @@ input {
     border-radius: 5px;
 }
 
+
+
 .popup, .popup-overlay {
     display: none;
 }
@@ -29,18 +31,26 @@ input {
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     z-index: 1000;
-    width: 300px;
-    height: 400px;
+    width: 350px;
+    height: 450px;
     display: none; /* Garante que o popup esteja oculto inicialmente */
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
+.popup > p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.2em;
+    font-weight: bold;
+    margin: 30px auto;
+    text-align: center;
+}
+
 .popup img {
     width: 80%;
     height: auto;
-    max-height: 250px;
+    max-height: 300px;
     object-fit: cover;
     border-radius: 10px;
 }
@@ -71,7 +81,7 @@ input {
     justify-content: center;
     gap: 10px;
     margin-top: 20px;
-    max-width: 750px;
+    max-width: 750%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -87,6 +97,11 @@ input {
 
 @media (max-width: 768px) {
     .mosaic-item {
-        width: calc(100% / 2 - 10px);
+        width: calc(100% / 5 - 10px);
+    }
+
+    .mosaic-item > p {
+        text-align: center;
+        font-size: 12px;
     }
 } 
