--- a/CSS/pages/index.css
+++ b/CSS/pages/index.css
@@ -2,3 +2,4 @@
 @import url(./global/fonts.css);
 @import url(../partials/home.css);
 @import url(../partials/botao_viva.css);
+@import url(../partials/acessibilidade.css);
