--- a/CSS/pages/partials/mosaico.css
+++ b/CSS/pages/partials/mosaico.css
@@ -4,13 +4,14 @@ input {
     width: 90%;
     padding: 10px;
     margin: 10px;
+    margin-top: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
     
 }
 
-
 .mosaic {
+    padding: 10px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
