--- a/CSS/pages/partials/partials.css
+++ b/CSS/pages/partials/partials.css
@@ -1,5 +1,5 @@
-@import url(./acessibilidade.css);
 @import url(./mosaico.css);
-@import url(./botao_viva.css);
+@import url(./botoes.css);
 @import url(./home.css);
 @import url(./popup.css);
+@import url(./fundointerativo.css);
