--- a/CSS/pages/global/media_desk.css
+++ b/CSS/pages/global/media_desk.css
@@ -13,14 +13,74 @@ Grandes Telas: acima de 1200px
 @media print {
 }
 
+@media (max-width: 375px) {
+    .mosaic-item {
+        width: calc(100% / 5 - 10px);
+    }
+
+    .mosaic-item > p {
+        text-align: center;
+        font-size: 12px;
+    }
+
+    .popup {
+        width: 300px;
+        height: 400px;   
+    }
+
+    #toggle-button-container {
+        width: 100%; /* Garante que o container ocupe toda a largura da tela */
+        justify-content: space-between;
+    }
+
+    #voiceButton, #toggle-button {
+        width: 120px; /* Mantém o tamanho fixo */
+    }
+
+    
+      .foto_pizza {
+        width: 200px;
+        margin: 100px;
+      }
+    
+}
+
 @media screen and (min-width:768px) and (max-width: 992px) { /* TABLET */
     
+    .mosaic-item {
+        width: calc(100% / 5 - 10px);
+    }
+
+    .mosaic-item > p {
+        text-align: center;
+        font-size: 12px;
+    }
+
+    .popup {
+        width: 300px;
+        height: 400px;   
+    }
+
+    #toggle-button-container {
+        width: 100%; /* Garante que o container ocupe toda a largura da tela */
+        justify-content: space-between;
+    }
+
+    #voiceButton, #toggle-button {
+        width: 120px; /* Mantém o tamanho fixo */
+    }
 }
 
 @media screen and (min-width:992px) and (max-width:1200px){ /* DESKTOP */
    
 }
-
-@media screen and (min-width:1200px) { /* TELAS GRANDES */
     
+
+@media screen and (max-width:1900px) { /* TELAS GRANDES */
+    .foto_pizza {
+        width: 350px;
+        margin: 60px;
+      }
+
+
 }
