--- a/CSS/pages/partials/home.css
+++ b/CSS/pages/partials/home.css
@@ -1,24 +1,60 @@
-
+input {
+  width: 90%;
+  padding: 10px;
+  margin: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  
+}
 
   /* Estilos para o conteúdo da página */
   .home_container {
     width: 100%;
-    height: 100vh;
     display: flex;
     flex-flow: column;
     align-items: center;
     justify-content: center;
-    gap: 140px;
   }
 
   .container > h1 {
     text-align: center;
     font-size: 1.6em;
     font-weight: 600;
+    padding: 50px;
   }
 
   .container > p {
     text-align: center;
     font-size: 1em;
-    
   }
+
+  .mosaic-item {
+    width: calc(100% / 5 - 10px);
+}
+
+.mosaic-item > p {
+    text-align: center;
+    font-size: 12px;
+}
+
+.popup {
+    width: 300px;
+    height: 400px;   
+}
+
+#toggle-button-container {
+    width: 100%; /* Garante que o container ocupe toda a largura da tela */
+    justify-content: space-between;
+}
+
+#voiceButton, #toggle-button {
+    width: 120px; /* Mantém o tamanho fixo */
+}
+
+
+  .foto_pizza {
+    width: 350px;
+    margin: 100px;
+  }
+
+
